--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
         <title>JS starter</title>
     </head>
     <body>
+        <div>
+            <h1>Enter country</h1>
+            <input type="text" id="input" />
+            <div id="output"></div>
+        </div>
         <script type="module" src="./src/init.js"></script>
     </body>
 </html>
